--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,17 @@ body {
     background-color: black;
     color: white;
 }
+h1 {
+
+}
 img {
     width: 100%;
+}
+h2 {
+    font-size: 15px;
+    text-transform: uppercase;
+}
+h3 {
+    font-size: 20px;    
+    text-transform: uppercase;
 }
