--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     background-color: black;
     color: white;
 }
+
 h1 {
 
 }
@@ -18,6 +19,10 @@ h2 {
     text-transform: uppercase;
 }
 h3 {
-    font-size: 20px;    
+    font-size: 20px;
     text-transform: uppercase;
+}
+
+#radar {
+    width: 100%;
 }
