tout est (presque) ben placé

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@ body {
 h1 {
 
 }
+ul li {
+    list-style-type: none;
+}
 img {
     width: 100%;
 }
@@ -25,4 +28,8 @@ h3 {
 
 #radar {
     width: 100%;
+}
+#white {
+    background-color: white;
+    color: black;
 }
