c'était fini avant le passage de gaetan

--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,42 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     background-color: black;
     color: white;
 }
 
-h1 {
 
+h1 {
+    display: inline-block;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+}
+
+header ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+header ul li {
+    display: inline-block;
 }
 ul li {
     list-style-type: none;
+    padding: 0 0.5em;
+    text-transform: uppercase;
 }
+
+section {
+    display: flex;
+}
+
+section article {
+    
+}
+
 img {
     width: 100%;
 }
